--- a/_css/styles.css
+++ b/_css/styles.css
@@ -7,10 +7,13 @@
     --cor3: #000;
 }
 
+body  {
+    background-color: var(--cor3);
+}
+
 body > main  {
     width: 100%;
     height: 100vh;
-    background-color: yellow;
 }
 
 header  {
@@ -18,25 +21,26 @@ header  {
     align-items: center;
     justify-content: space-between;
     background-color: var(--cor3);
-    padding: 0 1rem;
+    padding: 0 3rem;
     width: 100%;
     position: fixed;
     top: 0;
 }
 
-.max  { /*Altura e background do header definidos*/
+.max  {
     height: 80px;
-    background-color: rgba(21,20,20,0.944);
+    background-color: var(--cor3);
 }
-.min  { /*Ao fazer scroll, a uma dada altura, o header assumirá estes estilos dinamicamente - usar js*/
+.min  { 
     height: 60px;
 }
 
 header > h1  {
+    font-family: 'Berkshire Swash', cursive;
     color: var(--cor1);
-    font-size: 2.5rem;
 }
 header > h1 > span  {
+    font-family: 'Berkshire Swash', cursive;
     color: var(--texto-primario);
 }
 
@@ -47,7 +51,17 @@ header > div  {
 
 header > div > nav > .nav-primaria  {
     display: flex;
-    gap: 1rem;
+    gap: 1.3rem;
+}
+
+header > div > nav > .nav-primaria > li > a  {
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--texto-primario);
+}
+header > div > nav > .nav-primaria > li > a:hover  {
+    text-transform: uppercase;
+    transition: all 1s;
 }
 
 header > div > div  {
@@ -66,6 +80,7 @@ section.section-div  {
     padding: 0 6rem;
     color: var(--texto-primario);
     grid-template-columns: 1fr 1fr;
+    animation: inicializar .7s;
 }
 
 section.section-div > div  {
@@ -79,10 +94,31 @@ section.section-div > div .apresentacao  {
     grid-column: 1 / -1;
 }
 
+section.section-div > div > h2  {
+    font-weight: 500;
+}
+
 #redes-sociais  {
     font-size: 30px;
     display: flex;
     gap: 1.5rem;
+    height: 50px;
+    margin-top: 1.5rem;
+}
+
+#redes-sociais a:hover  {
+    font-size: 40px;
+    transition: all .15s;
+}
+
+#redes-sociais a:first-child  {
+    color: gray;
+}
+#redes-sociais a:nth-child(even)  {
+    color: #0077B5;
+}
+#redes-sociais a:last-child  {
+    color: #25D366;    
 }
 
 section.section-div > div > a  {
@@ -93,6 +129,11 @@ section.section-div > div > a  {
     font-weight: 700;
     border: 2px solid var(--cor1);
     color: var(--texto-primario);
+    margin-top: 1.5rem;
+}
+section.section-div > div > a:hover  {
+    border-color: var(--texto-primario);
+    background-color: var(--cor1);
 }
 
 section.section-div > img  {
@@ -105,5 +146,4 @@ section.section-div > img  {
 
 section#sobre  {
     height: 100vh;
-    background-color: yellow;
 }
