--- a/_css/styles.css
+++ b/_css/styles.css
@@ -55,7 +55,7 @@ header > div > nav > .nav-primaria  {
     align-items: center;
     justify-content: center;
     gap: 1.3rem;
-    height: 30px;
+    height: 20px;
 }
 
 header > div > nav > .nav-primaria > li > a  {
@@ -75,8 +75,9 @@ header > div > nav > .nav-primaria > li > a:hover  {
     --cor3: #fff;
 }
 
-#moon  {
-    width: 30px;
+#sun  {
+    width: 20px;
+    height: 20px;
     cursor: pointer;
 }
 
@@ -152,11 +153,23 @@ section.section-div > div > a:hover  {
 section.section-div > img  {
     width: 70%;
     height: 80%;
-    display: flex;
     margin-top: 3rem;
 }
 
+#link-topo  {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    color: #fff;
+    background-color: var(--cor1);
+    padding: .3rem .4rem;
+    font-size: 1.7rem;
+    border-radius: 5px;
+}
 
-section#sobre  {
+#sobre, #habilidades, #experiencia, #projetos, #contato  {
     height: 100vh;
+    width: 80%;
+    margin: 0 auto;
+    background-color: var(--cor2);
 }
