--- a/_css/styles.css
+++ b/_css/styles.css
@@ -1,12 +1,25 @@
 @charset "UTF-8";
 
 :root  {
+    /*-----------DARK MODE--------------*/
     --cor0: #fff;
     --cor1: #61DAFB;
     --cor2: #151515;
     --cor3: #000;
     --cor4: #F2F2F2;
     --cor5: #222;
+    --cor6: rgba(255,255,255,.65);
+    --cor7: #2223;
+}
+
+/*-----------LIGHT MODE--------------*/
+.light-mode  {
+    --cor0: #000;
+    --cor2:#F2F2F2;
+    --cor3: #fff;
+    --cor5: #fff;
+    --cor6: #6D6D6D;
+    --cor7: rgb(128 128 128 / .06);
 }
 
 body  {
@@ -27,6 +40,7 @@ header  {
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 1;
 }
 
 .max  {
@@ -69,14 +83,6 @@ header > div > nav > .nav-primaria > li > a:hover  {
     transition: all 1s;
 }
 
-/*-----------LIGHT MODE--------------*/
-.light-mode  {
-    --cor0: #000;
-    --cor2:#F2F2F2;
-    --cor3: #fff;
-    --cor5: #fff;
-}
-
 #sun  {
     width: 20px;
     height: 20px;
@@ -105,6 +111,10 @@ section.section-div > div  {
 
 section.section-div > div .apresentacao  {
     grid-column: 1 / -1;
+}
+
+section.section-div > div > p:first-of-type  {
+    color: var(--cor6);
 }
 
 section.section-div > div > h2  {
@@ -170,7 +180,6 @@ section.section-div > img  {
 }
 
 body > section, footer  {
-    height: 100vh;
     width: 80%;
     margin: 0 auto;
     background-color: var(--cor2);
@@ -179,9 +188,11 @@ body > section, footer  {
 /*--------------SOBRE--------------*/
 section#sobre  {
     margin: 0 auto;
+    height: 100vh;
+    padding-bottom: 3rem;
 }
 
-#sobre > h2  {
+#sobre > h2, #habilidades > h2  {
     text-align: center;
     font-family: 'Berkshire Swash', cursive;
     padding: 5rem 0 1rem 0;
@@ -204,28 +215,33 @@ section#sobre  {
 #sobre > #infos  {
     display: grid;
     grid-template-columns: 30% 70%;
-    grid-template-rows: repeat(1, auto);
+    grid-auto-rows: auto;
 }
 
 #infos > div > p:nth-child(2)  {
     font-weight: 600;
-    color: var(--cor5);
+    color: var(--cor6);
 }
 
 #infos > div .sobre-mim  {
     margin-bottom: 1.3rem;
 } 
 
-#infos > img  {
+#infos > #imagem-fundo  {
     grid-column: 1 / 2;
     border-radius: 4px;
     width: 100%;
+    background-image: url("../_img/Vandy2.jpg");
+    background-repeat: no-repeat;
+    background-position: top;
 }
 
-#infos > div  {
+#infos > div:nth-child(2)  {
     grid-column: 2 / -1;
-    height: 100%;
     padding: 0 1.5rem;
+    background-color: var(--cor2);
+    display: flex;
+    flex-direction: column;
 }
 
 #nome  {
@@ -248,22 +264,29 @@ section#sobre  {
     display: flex;
     gap: 2rem;
 }
-#dev #w-developer  {
+#dev .box:first-child  {
     margin-left: 2rem;
 }
-#dev #w-designer  {
+#dev .box:last-child  {
     margin-right: 2rem;
 }
 
-.web  {
+.box  {
     display: flex;
     flex: 1 0 0;
     text-align: center;
     flex-direction: column;
     gap: 1rem;
-    border-radius: 5px;
     padding: 1rem 0;
+    border-radius: 4px;
     background-color: var(--cor5);
+    position: relative;
+}
+
+.box > .web  {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 .web > i  {
     color: var(--cor1);
@@ -280,7 +303,12 @@ section#sobre  {
     margin: 0 auto;
     padding: 3px 5px;
     background-color: var(--cor1);
-    color: var(--cor0);
+    color: var(--cor6)
+}
+
+#form-infos  {
+    display: flex;
+    justify-content: space-between;
 }
 
 #formacao  {
@@ -288,12 +316,46 @@ section#sobre  {
     border-radius: 4px;
     background-color: var(--cor1);
     color: var(--cor0);
+    border: 2px solid var(--cor1);
     text-transform: uppercase;
     letter-spacing: 1.5px;
     font-weight: 600;
+    align-self: self-start;
+}
+#formacao:hover  {
+    cursor: pointer;
+    border: 2px solid var(--cor1);
+    color: var(--cor0);
+    background-color: var(--cor2);
+}
+
+#dialog > span  {
+    color: black;
+    font-weight: 600;
+    font-size: 1.5em;
+    cursor: pointer;
+    float: right;
+}
+#dialog > h2  {
+    padding-top: 1.7rem;
 }
 
 #mais-infos  {
-    float: right;
-    color: var(--cor0);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: .5rem;
+    color: var(--cor6);
+}
+#mais-infos i  {
+    padding-right: .4rem;
+    color: var(--cor1);
+}
+
+
+/*------------------HABILIDADES------------------*/
+section#habilidades  {
+    padding-top: 1rem;
+    background-color: var(--cor7);
+    height: 100vh;
 }
