--- a/_css/habilidades.css
+++ b/_css/habilidades.css
@@ -4,6 +4,22 @@ section#habilidades  {
     background-color: var(--cor7);
 }
 
+#habilidades > p  {
+    color: var(--cor6);
+    font-weight: 600;
+    margin: 0 3rem 1rem 3rem;
+}
+
+#habilidades > p::after{
+    background-color: var(--cor1);
+    height: 6px;
+    width: 180px;
+    margin: 20px 0;
+    content: '';
+    display: block;
+    border-radius: 5px;
+}
+
 #slider  {
     width: 80%;
     display: flex;
@@ -11,49 +27,110 @@ section#habilidades  {
     align-items: center;
     justify-content: center;
     margin: 0 auto;
+    margin-top: 2rem;
 }
 
 .swiper  {
     height: 300px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
-.tech-desc {
-    width: 13rem;
-    height: 100%;
+.wrapper  {
+    width: 80%;
+    height: 90%;
     margin: 0 auto;
-    border: 3px solid var(--cor1);
-    border-radius: 15px;
-    padding: 0 1rem;
-    background-color: var(--cor5);
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid var(--cor1);
+    border-radius: 12px;
+    background-color: var(--cor5);
+}
+
+.image  {
+    width: 500px;
+    height: 100%;  /*-----------------*/
+    position: relative;
+}
+
+.image > img  {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: auto;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.content  {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background-color: rgba(0,0,0,.3);
+    display: flex;
     justify-content: flex-end;
     align-items: center;
-    column-gap: 1.3rem;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center center;
+    flex-direction: column;
+    border-radius: 8px;
+    padding: 0 .5rem;
+    opacity: 0;
+    transition: .6s;
+}
+
+.content:hover  {
+    opacity: 1;
+}
+
+.content  > h1  {
+    align-self: self-start;
+    color: var(--cor0);
+}
+
+.content p  {
+    color: var(--cor4);
+}
+
+.content > *  {
+    transform: translateY(25px);
+    transition: transform 0.6s;
+}
+
+.content:hover > *  {
+    transform: translateY(0px);
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  width: 20px;
+  height: 20px;
+}
+.swiper-button-next  {
+    padding-left: 20px;
+}
+.swiper-button-prev  {
+    padding-right: 20px;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 22px;
+  line-height: 20px;
+  font-weight: bold;
+  opacity: .7;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after  {
+    transition: opacity .8s;
+}
+
+.swiper-button-next:hover::after,
+.swiper-button-prev:hover::after  {
+    opacity: 1;
 }
 
 
 
-#html  {
-    background-image: url(../img/logo-html.png);
-}
-#css  {
-    background-image: url(../img/logo-css.png);
-}
-#js  {
-    background-image: url(../img/logo-js.png);
-}
-#react  {
-    background-image: url(../img/logo-react.png);
-}
-#git  {
-    background-image: url(../img/logo-git.png);
-}
-#figma  {
-    background-image: url(../img/logo-figma.png);
-}
