retrabalhando a estrutura do Portfólio e implementando novas funcionalidades

--- a/_css/home.css
+++ b/_css/home.css
@@ -22,6 +22,17 @@
     --cor7: rgb(128 128 128 / .06);
 }
 
+@keyframes inicializar  {
+    from  {
+        opacity: 1;
+        transform: translate3d(0, -60px, 0);
+    }
+    to  {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
 body  {
     background-color: var(--cor3);
 }
@@ -74,10 +85,28 @@ header > div > nav > .nav-primaria  {
 }
 
 header > div > nav > .nav-primaria > li > a  {
+    padding-bottom: 6px;
+    padding-right: 10px;
+    position: relative;
     font-size: 18px;
     font-weight: 500;
     color: var(--cor0);
 }
+
+nav a::after  {
+    content: " ";
+    width: 0%;
+    height: 2.5px;
+    background-color: var(--cor1);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: .5s ease-in-out;
+}
+nav a:hover::after  {
+    width: 100%;
+}
+
 header > div > nav > .nav-primaria > li > a:hover  {
     font-weight: 700;
     transition: all 1s;
@@ -88,7 +117,6 @@ header > div > nav > .nav-primaria > li > a:hover  {
     height: 20px;
     cursor: pointer;
 }
-
 
 section.section-div  {
     height: 100vh;
@@ -111,6 +139,24 @@ section.section-div > div  {
 
 section.section-div > div .apresentacao  {
     grid-column: 1 / -1;
+}
+.apresentacao > #meuNome  {
+    font-weight: 700;
+    background: linear-gradient(to left, #00E3CC, #61DAFB, #269fc0, #3cbcf7);
+    background-size: 400% 100%;
+    animation: textoDegrade 10s linear infinite alternate;
+
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@keyframes textoDegrade  {
+    0%  {
+        background-position-x: 0%;
+    }
+    100%  {
+        background-position-x: 400%;
+    }
 }
 
 section.section-div > div > p:first-of-type  {
@@ -183,171 +229,4 @@ body > section, footer  {
     width: 80%;
     margin: 0 auto;
     background-color: var(--cor2);
-}
-
-/*--------------SOBRE--------------*/
-section#sobre  {
-    margin: 0 auto;
-    height: 100vh;
-    padding-bottom: 3rem;
-}
-
-#sobre > h2, #habilidades > h2  {
-    text-align: center;
-    font-family: 'Berkshire Swash', cursive;
-    padding: 5rem 0 1rem 0;
-    font-size: 2em;
-    color: var(--cor1);
-}
-
-.bolinhas  {
-    display: flex;
-    justify-content: center;
-    gap: .7rem;
-    padding-bottom: 2rem;
-}
-.bolinhas > span  {
-    border-radius: 50%;
-    padding: .5rem;
-    background-color: var(--cor1);
-}
-
-#sobre > #infos  {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    grid-auto-rows: auto;
-}
-
-#infos > div > p:nth-child(2)  {
-    font-weight: 600;
-    color: var(--cor6);
-}
-
-#infos > div .sobre-mim  {
-    margin-bottom: 1.3rem;
-} 
-
-#infos > #imagem-fundo  {
-    grid-column: 1 / 2;
-    border-radius: 4px;
-    width: 100%;
-    background-image: url("../img/Vandy2.jpg");
-    background-repeat: no-repeat;
-    background-position: top;
-}
-
-#infos > div:nth-child(2)  {
-    grid-column: 2 / -1;
-    padding: 0 1.5rem;
-    background-color: var(--cor2);
-    display: flex;
-    flex-direction: column;
-}
-
-#nome  {
-    font-weight: 600;
-    font-size: 1.8em;
-    color: var(--cor0);
-}
-
-#nome::after{
-    background-color: var(--cor1);
-    height: 6px;
-    width: 80px;
-    margin: 20px 0;
-    content: '';
-    display: block;
-    border-radius: 5px;
-}
-
-#dev  {
-    display: flex;
-    gap: 2rem;
-}
-#dev .box:first-child  {
-    margin-left: 2rem;
-}
-#dev .box:last-child  {
-    margin-right: 2rem;
-}
-
-.box  {
-    display: flex;
-    flex: 1 0 0;
-    text-align: center;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem 0;
-    border-radius: 4px;
-    background-color: var(--cor5);
-    position: relative;
-}
-
-.box > .web  {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-.web > i  {
-    color: var(--cor1);
-    font-size: 2.6em;
-}
-.web > p  {
-    color: var(--cor0);
-    font-weight: 500;
-    font-size: 1.45em;
-}
-.web > button  {
-    border-radius: 4px;
-    align-self: start;
-    margin: 0 auto;
-    padding: 3px 5px;
-    background-color: var(--cor1);
-    color: var(--cor6)
-}
-
-#form-infos  {
-    display: flex;
-    justify-content: space-between;
-}
-
-#formacao  {
-    padding: .7rem 1rem;
-    border-radius: 4px;
-    background-color: var(--cor1);
-    color: var(--cor0);
-    border: 2px solid var(--cor1);
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    font-weight: 600;
-    align-self: self-start;
-}
-#formacao:hover  {
-    cursor: pointer;
-    border: 2px solid var(--cor1);
-    color: var(--cor0);
-    background-color: var(--cor2);
-}
-
-#dialog > span  {
-    color: black;
-    font-weight: 600;
-    font-size: 1.5em;
-    cursor: pointer;
-    float: right;
-}
-#dialog > h2  {
-    padding-top: 1.7rem;
-}
-
-#mais-infos  {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    gap: .5rem;
-    color: var(--cor6);
-}
-#mais-infos i  {
-    padding-right: .4rem;
-    color: var(--cor1);
 }
