--- a/_css/habilidades.css
+++ b/_css/habilidades.css
@@ -1,6 +1,5 @@
 section#habilidades  {
-    padding-top: 1rem;
-    height: 100vh;
+    padding: 0 0 1.5rem 0;
     background-color: var(--cor7);
 }
 
@@ -53,6 +52,20 @@ section#habilidades  {
     width: 500px;
     height: 100%;  /*-----------------*/
     position: relative;
+    border-radius: 8px;
+}
+
+.image > span  {
+    display: block;
+    font-family: 'Berkshire Swash', cursive;
+    padding: 1.5rem;
+    font-weight: bolder;
+    color: var(--cor1);
+    transform: translateY(-53px);
+}
+
+#react  {
+    color: rgb(31, 111, 238);
 }
 
 .image > img  {
@@ -132,5 +145,16 @@ section#habilidades  {
     opacity: 1;
 }
 
+.swiper-pagination-bullet {
+    background-color: #918e8e;
+    width: 10px;
+    height: 10px;
+    margin: 0 5px;
+    border-radius: 50%;
+  }
+  
+  .swiper-pagination-bullet-active {
+    background-color: var(--cor1)
+  }
 
 
