--- a/_css/projetos.css
+++ b/_css/projetos.css
@@ -1,3 +1,56 @@
-section#projetos  {
-    height: 100vh;
+.modelos-projeto > ul {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+.modelos-projeto > ul  {
+    padding-bottom: 2rem;
+}
+
+.modelos-projeto > ul > li  {
+    color: var(--cor6);
+    background-color: var(--cor5);
+    padding: 6px 20px;
+    border-radius: 4px;
+    border: 1px solid var(--cor1);
+    cursor: pointer;
+}
+
+.armazenamento-projetos > ul  {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 1rem;
+}
+
+.armazenamento-projetos > ul > li  {
+    display: flex;
+    flex-direction: column;
+}
+
+.imagem-projeto > img  {
+    width: 100%;
+    height: 160px;
+    border-radius: 5px 5px 0 0;
+}
+
+.techs  {
+    transform: translateY(-55px);
+    margin-left: 20px;
+    color: var(--cor1);
+}
+
+.repositorio  {
+    transform: translateY(-23px);
+    text-align: center;
+    padding: .4rem 0;
+    border-radius: 0 0 5px 5px;
+    font-weight: 600;
+    background-color: var(--cor5);
+    color: var(--cor6);
+}
+
+.repositorio:hover  {
+    color: var(--cor0);
+    background-color: var(--cor1);
 }
