Implementação da seção de CONTATOS

--- a/_css/home.css
+++ b/_css/home.css
@@ -51,7 +51,7 @@ header  {
     width: 100%;
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .max  {
@@ -89,8 +89,11 @@ header > div > nav > .nav-primaria > li > a  {
     padding-right: 10px;
     position: relative;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: bold;
     color: var(--cor0);
+}
+header > div > nav > .nav-primaria > li > a:hover  {
+    transition: all 1s;
 }
 
 nav a::after  {
@@ -105,11 +108,6 @@ nav a::after  {
 }
 nav a:hover::after  {
     width: 100%;
-}
-
-header > div > nav > .nav-primaria > li > a:hover  {
-    font-weight: 700;
-    transition: all 1s;
 }
 
 #sun  {
@@ -142,6 +140,7 @@ section.section-div > div .apresentacao  {
 }
 .apresentacao > #meuNome  {
     font-weight: 700;
+    font-family: 'Berkshire Swash', cursive;
     background: linear-gradient(to left, #00E3CC, #61DAFB, #269fc0, #3cbcf7);
     background-size: 400% 100%;
     animation: textoDegrade 10s linear infinite alternate;
@@ -223,9 +222,10 @@ section.section-div > img  {
     padding: .3rem .4rem;
     font-size: 1.7rem;
     border-radius: 5px;
+    display: none;
 }
 
-body > section, footer  {
+body > section  {
     width: 80%;
     margin: 0 auto;
     background-color: var(--cor2);
