--- a/_css/home.css
+++ b/_css/home.css
@@ -15,7 +15,7 @@
 /*-----------LIGHT MODE--------------*/
 .light-mode  {
     --cor0: #000;
-    --cor2:#F2F2F2;
+    --cor2: #F2F2F2;
     --cor3: #fff;
     --cor5: #fff;
     --cor6: #6D6D6D;
@@ -56,7 +56,6 @@ header  {
 
 .max  {
     height: 80px;
-    background-color: var(--cor3);
 }
 .min  { 
     height: 60px;
@@ -74,6 +73,11 @@ header > h1 > span  {
 header > div  {
     display: flex;
     gap: 2rem;
+}
+
+header > div > .nav-container  {
+    display: flex;
+    color: var(--cor0);
 }
 
 header > div > nav > .nav-primaria  {
@@ -223,6 +227,58 @@ section.section-div > img  {
     font-size: 1.7rem;
     border-radius: 5px;
     display: none;
+}
+
+/*MOBILE*/
+@media screen and (max-width: 768px)  {
+    header  {
+        padding: 0 1rem;
+    }
+    .max  {
+        height: 40px;
+    }
+
+    header > div > nav > .nav-primaria  {
+        display: none;
+    }
+
+    .fa-bars, .fa-x  {
+        display: flex;
+        align-items: center;
+        font-weight: 800;
+        font-size: 1em;
+    }
+
+    header > h1  {
+        font-size: 1em;
+    }
+
+    header > div > nav > .nav-primaria.ativado  {
+        position: absolute;
+        display: grid; 
+        top: 40px;
+        height: 100%;
+        z-index: 1;
+        border-radius: 0 0 4px 4px;
+        animation: sobeSecao .8s ease-in-out forwards;       
+    }
+
+    @keyframes sobeSecao  {
+        from  {
+            transition: .5s;
+            transform: translate3d(60px, 0, 0);
+        }
+        to  {
+            transform: translate3d(0, 0, 0);
+        }
+    }
+}
+
+/*DESKTOP*/
+@media screen and (min-width: 992px)  {
+    .fa-bars, .fa-x  {
+        display: none;
+    }
 }
 
 body > section  {
