--- a/_css/home.css
+++ b/_css/home.css
@@ -272,6 +272,37 @@ section.section-div > img  {
             transform: translate3d(0, 0, 0);
         }
     }
+
+    section.section-div  {
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(2, auto);
+    }
+
+    section.section-div > img  {
+        grid-row: 1 / 2;
+        border-radius: 50%;
+        width: 70%;
+        height: 55%;
+        border: 4px solid var(--cor1);
+        padding: 4px;
+        margin-top: 1rem;
+    }
+
+    section.section-div > div  {
+        transform: translateY(-3rem);
+    }
+
+    #redes-sociais  {
+        font-size: 30px;
+        display: flex;
+        gap: 2.5rem;
+        height: 50px;
+        margin-top: 1.5rem;
+    }
+
+    section.section-div > div > a  {
+        margin-left: 2rem;
+    }
 }
 
 /*DESKTOP*/
