--- a/_css/sobre.css
+++ b/_css/sobre.css
@@ -28,12 +28,6 @@ section#sobre  {
     grid-auto-rows: auto;
 }
 
-#infos > div .sobre-mim  {
-    margin-bottom: 1.3rem;
-    font-weight: 600;
-    color: var(--cor6);
-} 
-
 #infos > #imagem-fundo  {
     grid-column: 1 / 2;
     border-radius: 4px;
@@ -57,6 +51,11 @@ section#sobre  {
     color: var(--cor0);
 }
 
+.texto-sobre  {
+    color: var(--cor0);
+    margin-bottom: 2rem;
+}
+
 #nome::after{
     background-color: var(--cor1);
     height: 6px;
@@ -65,83 +64,6 @@ section#sobre  {
     content: '';
     display: block;
     border-radius: 5px;
-}
-
-#dev  {
-    display: flex;
-    gap: 2rem;
-}
-#dev .box:first-child  {
-    margin-left: 2rem;
-}
-#dev .box:last-child  {
-    margin-right: 2rem;
-}
-
-.box  {
-    display: flex;
-    flex: 1 0 0;
-    text-align: center;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem .5rem .7rem .5rem;
-    border-radius: 4px;
-    background-color: var(--cor5);
-    position: relative;
-}
-
-.box > .web  {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-.web > i  {
-    color: var(--cor1);
-    font-size: 2.6em;
-}
-.web > p  {
-    color: var(--cor0);
-    font-weight: 500;
-    font-size: 1.45em;
-}
-
-.web > p.web-desc  {
-    font-size: 16px;
-    text-align: left;
-    color: var(--cor6);
-}
-
-.web::before  {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    box-sizing: border-box;
-    border-bottom: 3px solid transparent;
-    border-left: 3px solid transparent;
-    transition: all .8s ease;
-}
-
-.web::after  {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 0;
-    height: 0;
-    box-sizing: border-box;
-    border-top: 3px solid transparent;
-    border-right: 3px solid transparent;
-    transition: all .8s ease;
-}
-
-.box:hover > .web::after, .box:hover > .web::before  {
-    width: 100%;
-    height: 100%;
-    border-radius: 4px;
-    border-color: var(--cor1);
 }
 
 #form-infos  {
@@ -158,6 +80,7 @@ section#sobre  {
     letter-spacing: 1.5px;
     font-weight: 600;
     align-self: self-start;
+    color: var(--cor0);
 }
 #formacao:hover  {
     cursor: pointer;
@@ -199,4 +122,22 @@ dialog  {
 #mais-infos i  {
     padding-right: .4rem;
     color: var(--cor1);
+}
+
+
+/*MOBILE*/
+@media screen and (max-width: 768px)  {
+    body > section  {
+        width: 100%;
+    }
+
+    #sobre > #infos  {
+        grid-template-columns: 1fr;
+    }
+
+    #form-infos  {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
 }
