--- a/_css/projetos.css
+++ b/_css/projetos.css
@@ -123,3 +123,11 @@ button#mostrar:hover  {
     background-color: var(--cor1);
 } 
 
+@media screen and (max-width: 768px)  {
+    .armazenamento-projetos > ul  {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0 1rem;
+    }
+}
+
+
