--- a/_css/sobre.css
+++ b/_css/sobre.css
@@ -151,3 +151,10 @@ dialog  {
         gap: 1.5rem;
     }
 }
+
+/*TABLET*/
+@media screen and (min-width: 768.1px) and (max-width: 992px)  {
+    body > section  {
+        width: 95%;
+    }
+}
