Ajustes na responsividade e nos textos.

--- a/_css/habilidades.css
+++ b/_css/habilidades.css
@@ -158,3 +158,11 @@ section#habilidades  {
   }
 
 
+/*MOBILE*/
+@media screen and (max-width: 320px)  {
+    #slider  {
+        width: 90%;
+    }
+}
+
+
