--- a/_css/contato.css
+++ b/_css/contato.css
@@ -4,16 +4,20 @@ footer#contato  {
     background-color: var(--cor7);
 }
 
-#grid-form  {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 5rem 3rem 3rem 3rem;
-    column-gap: 1.5rem;
+#flex-form  {
+    display: flex;
+    gap: 2rem;
+    padding: 3rem 1rem;
+}
+
+#flex-form > form, #img-contato  {
+    width: 50%;
 }
 
 #flex-div  {
     display: flex;
     gap: 1.5rem;
+    justify-content: space-between;
 }
 
 #flex-div > span  {
@@ -24,6 +28,12 @@ footer#contato  {
 
 #flex-div > p  {
     color: var(--cor6);
+}
+
+#img-contato  {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
 }
 
 #img-contato > figure  {
@@ -176,12 +186,17 @@ input[type="submit"]:hover  {
         width: 100%;
     }
 
-    #grid-form  {
-        grid-template-columns: 1fr;
+    #flex-form  {
+        flex-direction: column-reverse;
+        gap: 1rem;
     }
 
-    #img-contato  {
-        grid-row: 1 / 2;
+    form  {
+        padding-top: 0rem;
+    }
+
+    #flex-form > form, #img-contato  {
+        width: 100%;
     }
 
     #flex-div  {
@@ -199,6 +214,7 @@ input[type="submit"]:hover  {
     #footer-navegacao  {
         flex-direction: column-reverse;
         gap: 1.6rem;
+        padding: 1.3rem 2.5rem 0 2.5rem;
     }
 }
 
@@ -208,16 +224,26 @@ input[type="submit"]:hover  {
         width: 95%;
     }
 
-    #grid-form  {
-        grid-template-columns: 55% 45%;
-        padding: 5rem 0rem 3rem 0rem;
+    #flex-form > form {
+        width: 55%;
+    }
+
+    #img-contato  {
+        width: 45%;
     }
 
     #flex-div  {
         padding-top: 1rem;
     }
 
-    figure  {
-        padding-top: 2.5rem;
+    #flex-div > p  {
+        text-align: justify;
+    }
+}
+
+/*DESKTOP*/
+@media screen and (min-width: 992.1px)  {
+    #flex-div > p  {
+        text-align: justify;
     }
 }
