ajustes na responsividade | criação de um efeito de mudança de cor nas bolinhas

--- a/_css/habilidades.css
+++ b/_css/habilidades.css
@@ -165,4 +165,14 @@ section#habilidades  {
     }
 }
 
+@media screen and (max-width: 768px)  {
+    #habilidades > p  {
+        margin: 0 1rem 1rem 1rem;
+    }
+
+    #habilidades > p::after{
+        width: 140px;
+    }
+}
+
 
