--- a/_css/projetos.css
+++ b/_css/projetos.css
@@ -5,7 +5,6 @@ section#projetos  {
 .modelos-projeto > ul {
     display: flex;
     justify-content: center;
-    gap: 3rem;
     padding-bottom: 2rem;
 }
 
@@ -121,16 +120,14 @@ button#mostrar:hover  {
 } 
 
 /*MOBILE*/
-@media screen and (max-width: 320px)  {
+@media screen and (max-width: 380px)  {
     .modelos-projeto > ul  {
-        justify-content: space-between;
-        gap: 0rem;
-        padding: 0 .4rem;
+        justify-content: space-around;
         padding-bottom: 2rem;
     }
 }
 
-@media screen and (max-width: 768px)  {
+@media screen and (min-width: 380.1px) and (max-width: 768px)  {
     .modelos-projeto > ul  {
         gap: 1.5rem;
     }
@@ -141,10 +138,33 @@ button#mostrar:hover  {
     }
 }
 
+@media screen and (max-width: 768px)  {
+    .armazenamento-projetos > ul  {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0 .5rem;
+    }
+}
+
 /*TABLET*/
 @media screen and (min-width: 768.1px) and (max-width: 992px)  {
+    .modelos-projeto > ul  {
+        gap: 3rem;
+    }
+
     .armazenamento-projetos > ul  {
         grid-template-columns: repeat(3, 1fr);
+        padding: 0 1rem;
+    }
+}
+
+/*DESKTOP+*/
+@media screen and (min-width: 992.1px)  {
+    .modelos-projeto > ul  {
+        gap: 4.5rem;
+    }
+
+    .armazenamento-projetos > ul  {
+        padding: 0 1rem;
     }
 }
 
