--- a/_css/sobre.css
+++ b/_css/sobre.css
@@ -19,7 +19,6 @@ section#sobre  {
 .bolinhas > span  {
     border-radius: 50%;
     padding: .5rem;
-    background-color: var(--cor1);
 }
 
 #sobre > #infos  {
@@ -143,6 +142,10 @@ dialog  {
 
     #sobre > #infos  {
         grid-template-columns: 1fr;
+    }
+
+    #infos > div:nth-child(2)  {
+        padding: 0 1rem;
     }
 
     #form-infos  {
