CONCLUSÃO DO PORTFÓLIO. Claro, sempre poderá haver melhorias

--- a/_css/inicio.css
+++ b/_css/inicio.css
@@ -373,6 +373,7 @@ section.section-div > img  {
         border: 4px solid var(--cor1);
         padding: 4px;
         margin-top: 1rem;
+        transform: translateY(-.7rem);
     }
 
     section.section-div > div  {
