:fix: Ajustes na responsividade para grandes telas

--- a/_css/contato.css
+++ b/_css/contato.css
@@ -254,3 +254,13 @@ input[type="submit"]:hover  {
         width: 70%;
     }
 }
+
+@media (min-width: 2800px)  {
+    footer#contato  {
+        width: 55%;
+    }
+
+    form  {
+        gap: 5.5rem;
+    }
+}
