--- a/_css/inicio.css
+++ b/_css/inicio.css
@@ -139,7 +139,7 @@ section.section-div > div  {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
-    row-gap: 1rem;
+    row-gap: 2rem;
 }
 
 section.section-div > div .apresentacao  {
@@ -341,6 +341,15 @@ section.section-div > img  {
 }
 
 /*MOBILE*/
+@media screen and (max-width: 320px)  {
+    section.section-div  {
+        height: auto;
+    }
+    section.section-div > img  {
+        padding: 1.3rem 0;
+    }
+}
+
 @media screen and (max-width: 768px)  {
     header  {
         padding: 0 1rem;
@@ -369,16 +378,14 @@ section.section-div > img  {
 
     section.section-div > img  {
         grid-row: 1 / 2;
-        border-radius: 50%;
         height: 60%;
-        border: 4px solid var(--cor1);
-        padding: 4px;
         margin-top: 1rem;
         transform: translateY(-.7rem);
     }
 
     section.section-div > div  {
         transform: translateY(-3rem);
+        row-gap: 1rem;
     }
 
     #redes-sociais  {
@@ -422,9 +429,17 @@ section.section-div > img  {
         padding: 3rem 4rem;
     }
 
-    .section-div > div {
+    section.section-div > div {
         grid-template-columns: 60% 40%;
         margin-top: 2rem;
+        row-gap: 2.1rem;
+    }
+
+    section.section-div > img  {
+        height: 60%;
+        width: 130%;
+        margin-top: 0rem;
+        transform: translateX(4.7rem);
     }
 }
 
@@ -461,5 +476,23 @@ body > section  {
     body > main, header  {
         width: 80vw;
         margin: 0 auto;
+    }
+}
+
+@media (min-width: 2800px)  {
+    body > main, header  {
+        width: 65vw;
+    }
+
+    section.section-div > div {
+        row-gap: 4.5rem;
+    }
+
+    header > div > nav > .nav-primaria  {
+        gap: 5.3rem;
+    }
+
+    #redes-sociais  {
+        gap: 5.3rem;
     }
 }
