--- a/_css/projetos.css
+++ b/_css/projetos.css
@@ -54,7 +54,7 @@ section#projetos  {
 
 .imagem-projeto > img  {
     width: 100%;
-    height: 170px;
+    height: 11rem;
     border-radius: 5px 5px 0 0;
 }
 
@@ -62,7 +62,7 @@ section#projetos  {
     position: absolute;
     color: rgb(13, 119, 206);
     font-weight: 600;
-    top: 140px;
+    top: 8.75rem;
     left: 20px;
     text-transform: uppercase;
     opacity: 0;
@@ -172,6 +172,12 @@ button#mostrar:hover  {
 @media (min-width: 1920px)  {
     section#projetos  {
         width: 70%;
+    }
+}
+
+@media (min-width: 2800px)  {
+    section#projetos  {
+        width: 55%;
     }
 }
 
